CHANGES.txt - 1.7rc1 - 2013-06-12
---------------------------------

CHANGES IN CUPS V1.7rc1

	- Fixed a build issue on ARM-based Linux systems - unable to validate
	  va_list arguments.
	- Added a new ippfind tool for finding IPP printers and other Bonjour
	  services (<rdar://problem/13876199>)
	- Fixed some issues with conversion of PWG media size names to
	  hundredths of millimeters (<rdar://problem/14065748>)
	- The IPP backend could crash on OS X when printing to a Kerberized
	  printer (<rdar://problem/14040186>)
	- The ipptool program now automatically extends timeouts when the
	  output buffer is filled (<rdar://problem/14016099>)
	- The ipptool program now supports the --help and --version options.
	- The ipptool program did not continue past include file errors by
	  default (<rdar://problem/13875803>)
	- The ipptool program now supports FILE-ID and TEST-ID directives and
	  includes their values in its XML output (<rdar://problem/13876038>)
	- The ipptool program now supports WITH-HOSTNAME, WITH-RESOURCE, and
	  WITH-SCHEME expect predicates to compare the corresponding URI
	  components (<rdar://problem/13876091>)


CHANGES IN CUPS V1.7b1

	- The configure script now supports a --with-rundir option to change
	  the transient run-time state directory from the default to other
	  locations like /run/cups (STR #4306)
	- The scheduler now supports PPD lookups for classes (STR #4296)
	- The cupsfilter program did not set the FINAL_CONTENT_TYPE
	  environment variable for filters.
	- Added a new "-x" option to the cancel command (STR #4103)
	- Made the PWG media handling APIs public (STR #4267)
	- Implemented ready media support for the cupsGetDestMediaXxx APIs
	  (STR #4289)
	- Added new cupsFindDestDefault, cupsFindDestReady, and
	  cupsFindDestSupported APIs (STR #4289)
	- Added new cupsGetDestMediaByIndex, cupsGetDestMediaCount, and
	  cupsGetDestMediaDefault APIs (STR #4289)
	- Added new ippGet/SetOctetString APIs for getting and setting an